# ChangeLog for dev-python/webcolors
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Apr 2012; James Rowe <jnrowe@gmail.com> webcolors-1.4.ebuild:
  Switched to python-distutils-ng eclass.

  26 Mar 2012; James Rowe <jnrowe@gmail.com> -webcolors-1.3.1.ebuild,
  webcolors-1.4.ebuild:
  Keyworded x86.

  26 Mar 2012; James Rowe <jnrowe@gmail.com> webcolors-1.4.ebuild:
  Keyworded amd64.

  19 Mar 2012; James Rowe <jnrowe@gmail.com> webcolors-1.3.1.ebuild,
  webcolors-1.4.ebuild:
  Switched to EAPI4.

  03 Mar 2012; James Rowe <jnrowe@gmail.com> webcolors-1.3.1.ebuild,
  webcolors-1.4.ebuild:
  Removed Python 2.4 support.

*webcolors-1.4 (25 Feb 2012)

  25 Feb 2012; James Rowe <jnrowe@gmail.com> +webcolors-1.4.ebuild,
  metadata.xml:
  Version bump [561].

  14 Nov 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
  Removed redundant herd info.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> webcolors-1.3.1.ebuild:
  Keyworded x86.

  08 Aug 2011; James Rowe <jnrowe@gmail.com> webcolors-1.3.1.ebuild:
  Keyworded amd64.

  09 Jul 2011; James Rowe <jnrowe@gmail.com> webcolors-1.3.1.ebuild:
  Keyworded ~x86.

*webcolors-1.3.1 (09 Jul 2011)

  09 Jul 2011; James Rowe <jnrowe@gmail.com> +webcolors-1.3.1.ebuild,
  +metadata.xml, +watch:
  Initial ebuild, by me. Required for blockdiag-0.8.4 bump.
