@@ -3,6 +3,9 @@
 # $Header: $
 
   09 Apr 2012; James Rowe <jnrowe@gmail.com> webcolors-1.4.ebuild:
+  src_install default hack now in jnrowe-pypi eclass.
+
+  09 Apr 2012; James Rowe <jnrowe@gmail.com> webcolors-1.4.ebuild:
   Switched to python-distutils-ng eclass.
 
   26 Mar 2012; James Rowe <jnrowe@gmail.com> -webcolors-1.3.1.ebuild,
